# KitobHub

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
frontend/: Dockerfile  index.html
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: SupportChat.tsx
infra/nginx/: nginx.conf
infra/postgres/init/: 03_create_auth_db.sql
scripts/: smoke-test.sh
services/ai-service/: Dockerfile  pyproject.toml
services/ai-service/app/: main.py
services/auth-service/: Dockerfile  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 0001_create_users_table.py
services/auth-service/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
services/catalog-service/: Dockerfile  alembic.ini  pyproject.toml
services/catalog-service/alembic/: env.py
services/catalog-service/alembic/versions/: 0001_create_catalog_tables.py  0003_add_advertisements_table.py
services/catalog-service/app/: cache.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
services/order-service/: Dockerfile  pyproject.toml
services/order-service/alembic/: env.py
services/order-service/alembic/versions/: 0001_create_order_tables.py  0002_add_order_customer_details.py
services/order-service/app/: catalog_client.py  config.py  crud.py  events.py  main.py  models.py  schemas.py  security.py
services/tools-service/: Dockerfile  pyproject.toml
services/tools-service/app/: config.py  main.py
tests/: test_integration.py
workers/notification-worker/: Dockerfile  pyproject.toml
workers/notification-worker/app/: config.py  main.py
