[project]
name = "catalog-service"
version = "0.1.0"
description = "KitobHub catalog service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.1",
    "alembic==1.14.0",
    "redis==5.2.1"
]

[tool.ruff]
line-length = 88
target-version = "py312"
